Fixed #1269 -- Fixed padding of switch button for dark mode. (#1298)

--- a/djangoproject/scss/_dark-mode.scss
+++ b/djangoproject/scss/_dark-mode.scss
@@ -244,7 +244,7 @@ html[data-theme="dark"] {
 	border: none;
 	background: transparent;
 	vertical-align: middle;
-	padding: 20px 10px;
+	padding: 20px 16px 20px 10px;
 
 	@include respond-max(768px) {
 		padding: 0;
